# OpenMP-MPI_Project

./: Makefile  README.md  cmake_install.cmake
Distributed/: CMakeCache.txt  CMakeLists.txt  Distributed_Project  Makefile  README.md  cmake_install.cmake  runJob.sh
Distributed/SourceFiles/: Makefile  Node.h  clusterInfo.cpp  clusterInfo.h  clusterManagement.cpp  clusterManagement.h  globalVariables.cpp  main.cpp  out  poem.cpp  poem.h
Distributed/source_files/: A_Woman's_Heart.txt  Node.cpp  Node.h  clusterInfo.cpp  clusterManagement.cpp  globalVariables.h  main.cpp  masterNode.cpp  masterNode.h  message.h  out  poem.cpp  poem.h
Parallel_Element/: CMakeCache.txt  README.md
Parallel_Element/SourceFiles/: Makefile  Particle.cpp  Particle.h  Position.cpp  Position.h  ScheduleType.cpp  ScheduleType.h  main.cpp  particleManipulation.cpp  resource.h
SourceFiles/: Particle.cpp  Particle.h  Position.cpp  Position.h  particleManipulation.cpp  particleManipulation.h
